crates/paladin-cli/tests/snapshots/cli_json_snapshots__snapshot_destroy_help_envelope.snap
---
source: crates/paladin-cli/tests/cli_json_snapshots.rs
expression: parse_stdout_json(&out)
---
{
  "help": {
    "command": "paladin destroy",
    "text": "[help-text]"
  }
}
