crates/paladin-cli/tests/snapshots/cli_json_snapshots__snapshot_destroy_success_envelope.snap
---
source: crates/paladin-cli/tests/cli_json_snapshots.rs
expression: parse_stdout_json(&out)
---
{
  "destroyed": {
    "backup_deleted": true,
    "primary_deleted": true,
    "vault_path": "[vault-path]"
  }
}
