crates/paladin-cli/tests/snapshots/cli_json_snapshots__snapshot_help_envelope_subcommand.snap
---
source: crates/paladin-cli/tests/cli_json_snapshots.rs
expression: parse_stdout_json(&assert)
---
{
  "help": {
    "command": "paladin init",
    "text": "[help-text]"
  }
}
